--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -3,7 +3,7 @@
 
 <div class="col-md-8">
 
-     <div style="text-align:center;font-size: 38px;">Update Profile</div>               
+     <div style="text-align:center;font-size: 38px;"><span style="font-size: 30px;"class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Update Profile</div>               
      
      
      <%= form_for @user, :html => {:multipart => true} do |f|%>
