--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,6 +1,6 @@
  <table >
      
-     <h4><%= link_to 'Edit', edit_profile_path(@user)  %></h4>
+     <h4><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> <%= link_to 'Edit', edit_profile_path(@user)  %></h4>
      <tr>
         <h4>Name : <%= @user.name%></h4>
      </tr>
