--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,190 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+// Place all the styles related to the Products controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+.products {
+  body, h1, h2, h3, h4, p, div {
+    margin: 0px 0px;
+    padding: 0px 0px;
+  }
+
+  .pane-header  {
+    background: #666;
+    border: 1px solid #FFF;
+    color: #FFF;
+    font-size: 28px;
+    margin: 0px 0px;
+    padding: 3px 0px;
+    text-align: center;
+  }
+
+  #product-table  {
+    margin: 0px 0px;
+    padding: 10px 0px;
+    width: 100%;
+  }
+
+  #product-table ul  {
+    list-style: none;
+    margin: 0px 0px;
+    padding: 0px 0px;
+    width: 100%;
+  }
+
+  #product-table ul li  {
+    float: left;
+  }
+
+  #product-table .product-box {
+    border: 1px solid #FAFBFB;
+    display: block;
+    height: 360px;
+    margin: 0px 0px;
+    padding: 15px 0px;
+    text-align: center;
+    width: 225px;
+
+    .product-image-box  {
+        height: 245px;
+        margin: 0px auto;
+        width: 200px;
+
+      .product-image  {
+        height: 230px;
+        transition: 0.5s ease all;
+        width: 180px;
+      }
+
+      .product-image:hover  {
+        height: 240px;
+        width: 190px;
+      }
+    }
+
+    .product-title-box  {
+        height: 65px;
+      a {
+        color: #666;
+        text-decoration: none;
+      }
+    }
+
+    .product-title-box a:hover  {
+      text-decoration: underline;
+      color: #e9573f;
+    }
+
+    .product-price-box  {
+      font-weight: bold;
+    }
+
+    .product-link-box {
+      margin: 0px auto;
+      text-align: center;
+      width: 150px;
+    }
+
+    .product-link-box span  {
+      background: #028BFF;
+      border: 1px solid #FAFBFB;
+      display: block;
+      float: left;
+      height: auto;
+      margin: 0px 0px;
+      width: 70px;
+    }
+
+    .product-link-box span a  {
+      color: #FFF;
+      display: block;
+      padding: 8px;
+      text-decoration: none;
+    }
+
+  }
+
+  #product-table .product-box:hover {
+    border: 1px solid #FAFBFB;
+    box-shadow: 0px 0px 10px -2px #222;
+  }
+
+  @mixin border-glow($param)  {
+    -webkit-box-shadow: $param;
+    -moz-box-shadow: $param;
+    box-shadow: $param;
+  }
+
+  .form-element  {
+    margin: 10px 0px;
+
+    label {
+      color: #333;
+      display: block;
+      float: left;
+      font-size: 16px;
+      font-weight: bold;
+      height:auto;
+      padding: 10px;
+      text-align: right;
+      width: 200px;
+    }
+
+    input[type=text] {
+      border: 1px solid #dfe0e1;
+      border-radius: 5px;
+      color: #555;
+      font-size: 16px;
+      height: auto;
+      margin: 0px 0px 0px 30px;
+      padding: 8px 8px;
+      transition: 0.1s ease all;
+      width: 350px;
+    }
+
+    textarea  {
+      @extend input[type=text];
+      height: 80px;
+    }
+
+    input[type=number]  {
+      @extend input[type=text];
+    }
+
+    input:focus, textarea:focus {
+      border-color: rgba(82, 168, 236, 0.9);
+      outline: 0;
+      @include border-glow(0px 3px 8px rgba(82, 168, 236, 0.6));
+    }
+
+    input[type=submit]  {
+      background: #028BFF;
+      border: 1px solid #028BFF;
+      border-radius: 5px;
+      color: #FAFBFB;
+      font-size: 16px;
+      padding: 8px 8px;
+    }
+  }
+
+  .field_with_errors  {
+    display: inline;
+
+    input[type=text], textarea  {
+      border: 1px solid #a94442;
+    }
+
+    input:focus, textarea:focus  {
+      @include border-glow(0px 3px 8px rgba(82, 18, 10, 0.6));
+    }
+  }
+
+  .error-msg  {
+    color: #a94442;
+  }
+
+  .clear  {
+    clear: both;
+  }
+}
