--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,10 @@
 		<title>Agrimart</title>
 		<meta name="generator" content="Bootply" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<link href="assets/bootstrap.min.css" rel="stylesheet">
-	    <link href="assets/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
-        <link href="assets/templatemo_style.css" rel="stylesheet" type="text/css">	
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">  
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">  
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    	<link href="assets/styles.css" rel="stylesheet">
+        <%= stylesheet_link_tag "styles" %>
+        <%= stylesheet_link_tag "templatemo_style" %>
 </head>
 <body>
 
