--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,3 +1,10 @@
+
+<div class="row">
+    
+<div class="col-sm-9">
+
+
+
 <div class="form-horizontal templatemo-forgot-password-form templatemo-container">
 <div class="container">            
 
@@ -74,4 +81,44 @@
 
     </div>
 </div>
+</div>
+</div>
+<!--  Create post button and Adds-->
+                      <div class="col-sm-3" style="text-align:center">
+                           
+                              <div class="panel panel-default">
+                               <div class="panel-body">
+                                  <p class="lead"><img src="/assets/bill.png" alt="img" height = "50" width  = "50"></img>  Create Post</p>
+                                  <p>Ready to sell?</p>
+                                  <div style='color: #FFF;float: center; font-size: 16px;'>
+                                       <a href='/posts/new' class='btn btn-info square-btn-adjust'>Create Post</a>
+                                  </div>
+                                 
+                                  </div>
+                              </div>
+                              <hr style="border-style:dashed">
+                      </div>
+
+                      <div class="col-sm-3" style="text-align:center">
+                           
+                              <div class="panel panel-default">
+                               <div class="panel-body">
+                                  <p class="lead"> Advertisement</p>
+                                  <p>Ad Text</p>
+                                  </div>
+                              </div>
+                      </div>
+
+                      <div class="col-sm-3" style="text-align:center">
+                           
+                              <div class="panel panel-default">
+                               <div class="panel-body">
+                                  <p class="lead"> Jain drip</p>
+                                  <p>Drips,sprinklers ,pumps</p>
+                                 
+                                  </div>
+                              </div>
+                      </div>
+                      <!--  /Create post button and Adds-->
+
 </div>
