--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,14 @@
 		<title>Agrimart</title>
 		<meta name="generator" content="Bootply" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">  
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+        <%= stylesheet_link_tag "bootstrap.min" %>
+        <%= stylesheet_link_tag "bootstrap" %>
         <%= stylesheet_link_tag "styles" %>
         <%= stylesheet_link_tag "templatemo_style" %>
+        <%= javascript_include_tag "bootstrap.min" %>
+        <%= javascript_include_tag "bootstrap" %>    
+
 </head>
 <body>
 
@@ -22,14 +26,60 @@
 <div class="wrapper">
     <div class="box">
         <div class="row row-offcanvas row-offcanvas-left">
-                      
+                   
+                            <!-- top nav -->
+              	<div class="navbar navbar-blue navbar-fixed-top">  
+                  
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>    
+                            </button>
+                            <a class="navbar-brand" href="/farmers" style="padding-left:50px;color:#fff;font-size:150%">AgriMart</a>
+                         
+                        <div class="navbar-collapse collapse" style="padding-left:280px;">
+                            
+    
+                    <form class="navbar-form navbar-left" action="/farmers">
+                        <div class="input-group input-group-sm" style="padding-top:3px;max-width:360px;">
+                          <input type="text" class="form-control" placeholder="Search" name="srchterm" id="srchterm">
+                          <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                          </div>
+                        </div>
+                    </form>
+                    <ul class="nav navbar-nav">
+                      <li>
+                        <a href="/<%= user_type%>s"> Home</a>
+                      </li>
+                      <li>
+                        <a href="/profiles">Profile</a>
+                      </li>
+                      <li>
+                        <a href="/stats">Stats</a>
+                      </li>
+                    </ul>
+
+                    <div style="color: #FFF; padding: 10px 10px 5px 5px; float: right; font-size: 18px;">
+                        
+                        <% if current_user %>
+                        <%=current_user.name %>
+                        <a href="/log_out" class="btn btn-warning square-btn-adjust-logout"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> Logout</a>
+                        <%end%>        
+
+                  
+                    </div>                    
+    
+                        </div> 
+                    
+                </div>
+                <!-- /top nav -->
+
           
             <!-- sidebar -->
-            <div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
+            <div style="padding-top:100px;" class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
               
-                        <div style="
-                          padding-left:20px;font-size: 48px;
-                                    ">AgriMart</div>
   
                    <hr style="border-style:dashed">
               	<ul class="nav">
@@ -58,46 +108,10 @@
             <!-- main right col -->
             <div class="column col-sm-10 col-xs-11" id="main" >
 
-                <!-- top nav -->
-              	<div class="navbar navbar-blue navbar-static-top">  
-                    
-                  	<nav class="collapse navbar-collapse" role="navigation">
-                    <form class="navbar-form navbar-left" action="/farmers">
-                        <div class="input-group input-group-sm" style="padding-top:5px;max-width:360px;">
-                          <input type="text" class="form-control" placeholder="Search" name="srchterm" id="srchterm">
-                          <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                          </div>
-                        </div>
-                    </form>
-                    <ul class="nav navbar-nav">
-                      <li>
-                        <a href="/<%= user_type%>s"><img src="/assets/home.png" alt="img" height = "30" width  = "30"></img> Home</a>
-                      </li>
-                      <li>
-                        <a href="/profiles"><img src="/assets/passport.png" alt="img" height = "30" width  = "30"></img> Profile</a>
-                      </li>
-                      <li>
-                        <a href="/stats"><img src="/assets/bill.png" alt="img" height = "30" width  = "30"></img> Stats</a>
-                      </li>
-
-                      
-                    </ul>
-                    <div style="color: #FFF; padding: 15px 10px 5px 50px; float: right; font-size: 16px;">
-                        
-                        <% if current_user %>
-                        <%=current_user.email %>
-                        <a href="/log_out" class="btn btn-warning square-btn-adjust-logout"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> Logout</a>
-                        <%end%>        
-
-                  
-                  </div>
-                  	</nav>
-                </div>
-                <!-- /top nav -->
 
                 <div class="padding">
-                    <div class="full col-sm-9">
+                
+                <div class="full col-sm-9">
                 
                 <div style="font-size:30px; color:green; text-align:center;"class="flash">
                 
@@ -106,7 +120,8 @@
                     <%end%>
                 </div>
 
-  
+
+
 <%= yield %>
 
 
@@ -116,7 +131,7 @@
                         Copyright &copy 2015 Agrimart<sup>&reg</sup> Incorporation Ltd. All Rights Reserved
                       <br></h4>
                                                    
-                        
+                </div>    
                 </div><!-- /padding -->
 
             </div>
@@ -134,3 +149,9 @@
 		<script src="/assets/scripts.js"></script>
 </body>
 </html>
+    
+    
+    
+    
+    
+    
